@@ -5,6 +5,6 @@
 .*: +file format .*arm.*
 
 Disassembly of section \.text:
-00000000 <main> 20010000 	andcs	r0, r1, r0
-00000004 <main\+0x4> 000000f9 	strdeq	r0, \[r0\], -r9
-00000008 <main\+0x8> 00004cd5 	ldrdeq	r4, \[r0\], -r5
+00000000 <main> 20010000 	.word	0x20010000
+00000004 <main\+0x4> 000000f9 	.word	0x000000f9
+00000008 <main\+0x8> 00004cd5 	.word	0x00004cd5
