@@ -1,8 +1,15 @@
+2015-03-05  Renlin Li  <renlin.li@arm.com>
+
+	* gas/arm/dis-data.d: Adjust the desired output.
+	* gas/arm/dis-data2.d: Ditto.
+
 2015-03-10  Renlin Li  <renlin.li@arm.com>
 
 	* gas/aarch64/ldst-reg-uns-imm.d: Adjust expected output.
 	* gas/aarch64/ldst-reg-unscaled-imm.d: Likewise.
-	* gas/aarch64/reloc-insn.d: Likewise.2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>
+	* gas/aarch64/reloc-insn.d: Likewise.
+
+2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>
 
 	* gas/aarch64/codealign.d: Add test for code section alignment.
 	* gas/aarch64/codealign.s: New file.
